--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <p id="tips">开始扫描 WiFi...</p>
     <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js" type="text/javascript"></script>
-    <script src="http://iot.espressif.cn/static/js/jquery.min.js"></script>
+    <script src="https://iot.espressif.cn/static/js/jquery.min.js"></script>
     <script>
     (function(){   
         json = {
@@ -35,7 +35,7 @@
             jsApiList: ['configWXDeviceWiFi']
         });
         wx.ready(function () {
-        console.log(111);
+            console.log(111);
             wx.checkJsApi({
                 jsApiList: ['configWXDeviceWiFi'],
                 success: function(res) {
