--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
                 jsApiList: ['configWXDeviceWiFi'],
                 success: function(res) {
                     wx.invoke('configWXDeviceWiFi', {}, function(res){
-                        alert(111);
                         err_msg = res.err_msg
                         if(err_msg == 'configWXDeviceWiFi:ok') {
-                            //$('#tips').html("配置 wifi 成功，正在跳转...");
+                            $('#tips').html("配置 wifi 成功，正在跳转...");
                             //window.location = 'https://iot.espressif.cn/m/#/' + window.location.search;
                             return;
                         } else {
-                            //$('#tips').html("配置 wifi 失败，是否再次<a href=\"https://iot.espressif.cn/configWXDeviceWiFi.html" + window.location.search +  "\">扫描</a>");
+                            $('#tips').html("配置 wifi 失败，是否再次<a href=\"https://iot.espressif.cn/configWXDeviceWiFi.html" + window.location.search +  "\">扫描</a>");
                         }
-                        //console.log('configWXDeviceWiFi', res);
+                        console.log('configWXDeviceWiFi', res);
                     });
                 }
             });
