--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             signature: signature,
             jsApiList: ['configWXDeviceWiFi']
         });
+        alert(3333);
         wx.ready(function () {
             wx.checkJsApi({
                 jsApiList: ['configWXDeviceWiFi'],
