--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 success: function(res) {
                     wx.invoke('configWXDeviceWiFi', {}, function(res){
                         err_msg = res.err_msg
-                        alert(res);
+                        alert(err_msg);
                         if(err_msg == 'configWXDeviceWiFi:ok') {
                             $('#tips').html("配置 wifi 成功，正在跳转...");
                             //window.location = 'https://iot.espressif.cn/m/#/' + window.location.search;
